--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
 }
+
 div {
     padding: 0;
 }
@@ -23,6 +24,7 @@ h1, h2, h3 {
 a {
     text-decoration: none;
 }
+
 .nav-item {
     color: white;
     font-size: 1.5rem;
@@ -30,18 +32,17 @@ a {
     margin-right: 1rem;
     font-weight: bold;
 }
+
 .nav-item:visited {
     color: white;
 }
+
 .nav-item:hover {
     color: red;
     text-decoration: wavy underline white;
-    font-size: 1.5rem;
-    font-family: 'Courier New', Courier, monospace;
-    margin-right: 1rem;
-    font-weight: bold;
     transition: 1s;
 }
+
 .nav-bar {
     position: fixed;
     top: 0;
@@ -52,12 +53,14 @@ a {
     align-items: center;
     padding: 1rem;
 }
+
 .nav-item-img {
     width: 80px;
     height: auto;
     object-fit: cover;
     margin-right: 2rem;
 }
+
 .nav-account-managment {
     width: 30px;
     height: auto;
@@ -100,6 +103,7 @@ a {
 
 .news-article {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     margin-bottom: 2rem;
     background-color: white;
@@ -109,7 +113,8 @@ a {
 }
 
 .news-image {
-    width: 200px;
+    width: 100%;
+    max-width: 200px;
     height: auto;
     border-radius: 10px;
     margin-right: 1rem;
@@ -138,4 +143,83 @@ a {
 
 .read-more:hover {
     background-color: red;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+    .nav-bar {
+        flex-direction: column;
+        height: auto;
+        padding: 0.5rem;
+    }
+
+    .nav-item {
+        margin-right: 0;
+        margin-bottom: 0.5rem;
+        font-size: 1.2rem;
+    }
+
+    .image {
+        height: 30vh;
+    }
+
+    .image h1 {
+        font-size: 2rem;
+    }
+
+    .news-section {
+        padding: 1rem;
+    }
+
+    .news-article {
+        flex-direction: column;
+    }
+
+    .news-image {
+        margin-right: 0;
+        margin-bottom: 1rem;
+        width: 100%;
+        max-width: none;
+    }
+
+    .news-content h3 {
+        font-size: 1.2rem;
+    }
+
+    .read-more {
+        padding: 0.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .nav-bar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .nav-item-img {
+        margin-right: 0;
+        margin-bottom: 0.5rem;
+        width: 60px;
+    }
+
+    .nav-item {
+        font-size: 1rem;
+    }
+
+    .image {
+        height: 20vh;
+    }
+
+    .image h1 {
+        font-size: 1.5rem;
+    }
+
+    .news-section h2 {
+        font-size: 1.5rem;
+    }
+
+    .news-content h3 {
+        font-size: 1rem;
+    }
 }
