--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,18 @@ a {
     text-decoration: none;
 }
 
+.nav-bar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 3rem;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    z-index: 1000;
+}
+
 .nav-item {
     color: white;
     font-size: 1.5rem;
@@ -43,17 +55,6 @@ a {
     transition: 1s;
 }
 
-.nav-bar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 3rem;
-    background-color: black;
-    display: flex;
-    align-items: center;
-    padding: 1rem;
-}
-
 .nav-item-img {
     width: 80px;
     height: auto;
@@ -61,14 +62,23 @@ a {
     margin-right: 2rem;
 }
 
-.nav-account-managment {
-    width: 30px;
-    height: auto;
-    clip-path: circle();
-    position: absolute;
-    top: .5rem;
-    right: 1rem;
-    background: linear-gradient(90deg, rgba(0,236,255,1) 0%, rgba(0,156,143,1) 50%, rgba(0,212,255,1) 100%);
+.nav-toggle {
+    display: none;
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.nav-menu {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+}
+
+.nav-menu-visible {
+    display: block;
 }
 
 .image {
@@ -148,15 +158,27 @@ a {
 /* Media Queries */
 @media (max-width: 768px) {
     .nav-bar {
-        flex-direction: column;
-        height: auto;
-        padding: 0.5rem;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
 
     .nav-item {
-        margin-right: 0;
-        margin-bottom: 0.5rem;
+        margin: 0.5rem 0;
         font-size: 1.2rem;
+    }
+
+    .nav-toggle {
+        display: block;
+    }
+
+    .nav-menu {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .nav-menu.nav-menu-visible {
+        display: flex;
     }
 
     .image {
