--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
 }
 
 div {
@@ -25,16 +24,17 @@ a {
     text-decoration: none;
 }
 
-.nav-bar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 3rem;
-    background-color: black;
+footer {
     display: flex;
     align-items: center;
-    padding: 1rem;
-    z-index: 1000;
+    justify-content: center;
+    background-color: black;
+    width: 100%;
+    height: 3rem;
+}
+
+footer > h1 {
+    color: white;
 }
 
 .nav-item {
@@ -43,6 +43,7 @@ a {
     font-family: 'Courier New', Courier, monospace;
     margin-right: 1rem;
     font-weight: bold;
+    transition: 1s;
 }
 
 .nav-item:visited {
@@ -52,7 +53,23 @@ a {
 .nav-item:hover {
     color: red;
     text-decoration: wavy underline white;
+    font-size: 1.5rem;
+    font-family: 'Courier New', Courier, monospace;
+    margin-right: 1rem;
+    font-weight: bold;
     transition: 1s;
+}
+
+.nav-bar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 3rem;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    z-index: 10;
 }
 
 .nav-item-img {
@@ -64,10 +81,8 @@ a {
 
 .nav-toggle {
     display: none;
-    background: none;
-    border: none;
-    color: white;
     font-size: 1.5rem;
+    color: white;
     cursor: pointer;
 }
 
@@ -77,8 +92,8 @@ a {
     justify-content: space-between;
 }
 
-.nav-menu-visible {
-    display: block;
+.nav-menu.active {
+    display: flex;
 }
 
 .image {
@@ -177,7 +192,7 @@ a {
         width: 100%;
     }
 
-    .nav-menu.nav-menu-visible {
+    .nav-menu.active {
         display: flex;
     }
 
