--- a/css/ranking.css
+++ b/css/ranking.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    background-color: black;
 }
 
 div {
@@ -26,16 +27,15 @@ a {
 }
 
 footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background-color: black;
     width: 100%;
     height: 3rem;
+    margin-bottom: 0;
 }
 
 footer > h1 {
     color: white;
+    text-align: center;
 }
 
 .nav-item {
